versioned_docs/version-2.5/getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/rollbacks.adoc
= Rollbacks
:experimental:

== Rolling Back to Rancher v2.5.0+

To roll back to Rancher v2.5.0+, use the *Rancher Backups* application and restore Rancher from backup.

Rancher has to be started with the lower/previous version after a rollback.

A restore is performed by creating a Restore custom resource.

____
*Important*

* Follow the instructions from this page for restoring rancher on the same cluster where it was backed up from. In order to migrate rancher to a new cluster, follow the steps to xref:../../../how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/migrate-rancher-to-new-cluster.adoc[migrate rancher.]
* While restoring Rancher on the same setup, the Rancher deployment is manually scaled down before the restore starts, then the operator will scale it back up once the restore completes. As a result, Rancher and its UI will be unavailable until the restore is complete. While the UI is unavailable, use the original cluster kubeconfig with the restore YAML file: `kubectl create -f restore.yaml`.
____

=== Create the Restore Custom Resource

. In the *Cluster Explorer,* go to the dropdown menu in the upper left corner and click *Rancher Backups.*
 ** NOTE: If the Rancher Backups app is not visible in the dropdown, you will need to install it from the Charts page in *Apps & Marketplace*. Refer link:../../../how-to-guides/new-user-guides/helm-charts-in-rancher.adoc#charts[here] for more information.
. Click *Restore.*
. Create the Restore with the form or with YAML. For help creating the Restore resource using the online form, refer to the xref:../../../reference-guides/backup-restore-configuration/restore-configuration.adoc[configuration reference] and to the xref:../../../reference-guides/backup-restore-configuration/examples.adoc[examples.]
. To use the YAML editor, you can click menu:Create[Create from YAML.] Enter the Restore YAML. The following is an example Restore custom resource:
+
[,yaml]
----
 apiVersion: resources.cattle.io/v1
 kind: Restore
 metadata:
   name: restore-migration
 spec:
   backupFilename: backup-b0450532-cee1-4aa1-a881-f5f48a007b1c-2020-09-15T07-27-09Z.tar.gz
   encryptionConfigSecretName: encryptionconfig
   storageLocation:
     s3:
       credentialSecretName: s3-creds
       credentialSecretNamespace: default
       bucketName: rancher-backups
       folder: rancher
       region: us-west-2
       endpoint: s3.us-west-2.amazonaws.com
----
+
For help configuring the Restore, refer to the xref:../../../reference-guides/backup-restore-configuration/restore-configuration.adoc[configuration reference] and to the xref:../../../reference-guides/backup-restore-configuration/examples.adoc[examples.]

. Click *Create.*

*Result:* The backup file is created and updated to the target storage location. The resources are restored in this order:

. Custom Resource Definitions (CRDs)
. Cluster-scoped resources
. Namespaced resources

To check how the restore is progressing, you can check the logs of the operator. Follow these steps to get the logs:

[,yaml]
----
kubectl get pods -n cattle-resources-system
kubectl logs -n cattle-resources-system -f
----

=== Roll back to a previous Rancher version

Rancher can be rolled back using the Helm CLI. To roll back to the previous version:

[,yaml]
----
helm rollback rancher -n cattle-system
----

If the previous revision is not the intended target, you can specify a revision to roll back to. To see the deployment history:

[,yaml]
----
helm history rancher -n cattle-system
----

When the target revision is determined, perform the rollback. This example will roll back to revision `3`:

[,yaml]
----
helm rollback rancher 3 -n cattle-system
----

== Rolling Back to Rancher v2.2-v2.4+

To roll back to Rancher before v2.5, follow the procedure detailed here: xref:../../../../version-2.0-2.4/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/restore-rancher-launched-kubernetes-clusters-from-backup.adoc[Restoring Backups -- Kubernetes installs] Restoring a snapshot of the Rancher server cluster will revert Rancher to the version and state at the time of the snapshot.

For information on how to roll back Rancher installed with Docker, refer to xref:../other-installation-methods/rancher-on-a-single-node-with-docker/roll-back-docker-installed-rancher.adoc[this page.]

____
Managed clusters are authoritative for their state. This means restoring the rancher server will not revert workload deployments or changes made on managed clusters after the snapshot was taken.
____

== Rolling Back to Rancher v2.0-v2.1

Rolling back to Rancher v2.0-v2.1 is no longer supported. The instructions for rolling back to these versions are preserved xref:../../../../version-2.0-2.4/how-to-guides/new-user-guides/backup-restore-and-disaster-recovery/restore-rancher-launched-kubernetes-clusters-from-backup.adoc[here] and are intended to be used only in cases where upgrading to Rancher v2.2+ is not feasible.
